Großes Refactoring. Jetzt sieht es schon ganz gut aus, nur das Thema ist immer noch nicht so ganz hübsch.

--- a/site/default/site-config.ini
+++ b/site/default/site-config.ini
@@ -1,4 +1,12 @@
 
-title = Bee Static Site generator
+; Theme
 theme = default
-site_lang_related_pages=Ähnliche Seiten
+
+; Title of your site
+title = yet another blog
+
+; you may overwrite some language settings
+;lang_related_pages=Related Pages
+
+; setting the locale
+locale = EN
